Fix missing space between blockquote and source
ref #2665

--- a/eruditorg/static/sass/components/article/_insets-examples.scss
+++ b/eruditorg/static/sass/components/article/_insets-examples.scss
@@ -61,6 +61,10 @@
 
   }
 
+  blockquote + p {
+    margin-top: 0.75em;
+  }
+
 }
 
 .exemple {
